--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,4 +1,3 @@
-node_modules
 # Logs
 logs
 *.log
@@ -7,7 +6,7 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
+.env 
 node_modules
 dist
 dist-ssr
